--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -6,9 +6,9 @@
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.spriteshape": "5.1.4",
     "com.unity.2d.tilemap": "1.0.0",
+    "com.unity.cinemachine": "2.6.17",
     "com.unity.collab-proxy": "1.11.2",
     "com.unity.ide.rider": "2.0.7",
-    "com.unity.ide.visualstudio": "2.0.11",
     "com.unity.ide.vscode": "1.2.4",
     "com.unity.test-framework": "1.1.29",
     "com.unity.textmeshpro": "3.0.6",
@@ -19,7 +19,6 @@
     "com.unity.modules.animation": "1.0.0",
     "com.unity.modules.assetbundle": "1.0.0",
     "com.unity.modules.audio": "1.0.0",
-    "com.unity.modules.autostreaming": "1.0.0",
     "com.unity.modules.cloth": "1.0.0",
     "com.unity.modules.director": "1.0.0",
     "com.unity.modules.imageconversion": "1.0.0",
